// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Border - Divide Width divide-x 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "borderLeftWidth": 1,
          "borderRightWidth": 0,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width divide-x-0 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width divide-x-0.5 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "borderLeftWidth": 0.5,
          "borderRightWidth": 0,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width divide-x-2 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "borderLeftWidth": 2,
          "borderRightWidth": 0,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width divide-x-4 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "borderLeftWidth": 4,
          "borderRightWidth": 0,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width divide-x-8 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "borderLeftWidth": 8,
          "borderRightWidth": 0,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width divide-y 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "borderBottomWidth": 0,
          "borderTopWidth": 1,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width divide-y-0 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "borderBottomWidth": 0,
          "borderTopWidth": 0,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width divide-y-0.5 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "borderBottomWidth": 0,
          "borderTopWidth": 0.5,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width divide-y-2 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "borderBottomWidth": 0,
          "borderTopWidth": 2,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width divide-y-4 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "borderBottomWidth": 0,
          "borderTopWidth": 4,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Border - Divide Width divide-y-8 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "borderBottomWidth": 0,
          "borderTopWidth": 8,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;
